--- a/Ghibli.html
+++ b/Ghibli.html
@@ -13,26 +13,25 @@
                 Princess Mononoke
             </p>
         </div>
-        <!--
+        
         <div class="checkbox__box">
             <div class="checkbox">
                 <label for="q1">✅</label>
-                <input type="checkbox" id="q1" name="q1" value="a">
+                <input type="radio" id="q1" name="q1" value="a">
             </div>
             <div class="checkbox">
                 <label for="q1">🚫</label>
-                <input type="checkbox" id="q1" name="q1" value="b">
+                <input type="radio" id="q1" name="q1" value="b">
             </div>
             <div class="checkbox">
                 <label for="q1">👤</label>
-                <input type="checkbox" id="q1" name="q1" value="c">
+                <input type="radio" id="q1" name="q1" value="c">
             </div>
             <div class="checkbox">
                 <label for="q1">👥</label>
-                <input type="checkbox" id="q1" name="q1" value="d">
+                <input type="radio" id="q1" name="q1" value="d">
             </div>
         </div>
-    -->
 
         <div class="card">
             <img class="img_shrink" src="Screen Shot 2024-02-28 at 4.49.57 PM.png" alt="ghibli movie poster">
