--- a/Ghibli.html
+++ b/Ghibli.html
@@ -6,7 +6,17 @@
         <script src="Ghibli.js"></script>
     </head>
     <body>
-
+        <div class="top__bar">
+            <div class="top__bar-box">
+                print
+            </div>
+            <div class="top__bar-title">
+                Studio Ghibli Checklist ✓
+            </div>
+            <div class="top__bar-box">
+                login
+            </div>
+        </div>
         <div class="card">
             <img class="img_shrink" src="Screen Shot 2024-02-28 at 4.39.50 PM.png" alt="ghibli movie poster">
             <p class="card__name">
