--- a/Login.html
+++ b/Login.html
@@ -15,6 +15,14 @@
         </div>
 
         <div class="remember">
+            <label><input type="checkbox">Remember me</label>
+        </div>
+        <div class="forget">
+            <a ref="passwordreset.html">Forgot Password?</a>
+        </div>
+
+        <div class="submit">
+            <button type="submit" class="btn">login</button>
         </div>
       </div>
   </body>
