--- a/Ghibli.html
+++ b/Ghibli.html
@@ -14,7 +14,7 @@
                 Studio Ghibli Checklist ✓
             </div>
             <div class="top__bar-box">
-                login
+                <a href="login.html">login</a>
             </div>
         </div>
         <div class="card">
