--- a/Ghibli.html
+++ b/Ghibli.html
@@ -589,5 +589,32 @@
             </div>
         </div>
         
+        <div>
+            <button onclick="printRadio('Princess Mononoke');
+            printRadio('My Neighbour Totoro');
+            printRadio('Ponyo');
+            printRadio('Kiki\'s Delivery Service');
+            printRadio('The Boy and the Heron');
+            printRadio('Howl\'s Moving Castle');
+            printRadio('Grave of the Fireflies');
+            printRadio('Spirited Away');
+            printRadio('The Wind Rises');
+            printRadio('Tales from Earthsea');
+            printRadio('The Secret World of Arrietty');
+            printRadio('Castle in the Sky');
+            printRadio('Nausicaä of the Valley of the Wind');
+            printRadio('The Tale of Princess Kaguya');
+            printRadio('When Marnie Was There');
+            printRadio('The Cat Returns');
+            printRadio('From Up On Poppy Hill');
+            printRadio('Crimson Pig / Porco Rosso');
+            printRadio('Pom Poko');
+            printRadio('Whisper of the Heart');
+            printRadio('Only Yesterday');
+            printRadio('My Neighbors the Yamadas');
+             "> SUBMIT </button>
+            <div id="output"></div>
+        </div>
+        
     </body>
 </html>
